@@ -397,7 +397,7 @@ function Shaman:initBuffs()
     table.insert(self.selfBuffs, self.spells.selfprocheal)
     table.insert(self.selfBuffs, common.getAA('Preincarnation'))
 --
-    table.insert(self.combatBuffs, self.spells.champion)
+    --table.insert(self.combatBuffs, self.spells.champion)
     table.insert(self.selfBuffs, common.getItem('Earring of Pain Deliverance', {CheckFor='Reyfin\'s Random Musings'}))
     table.insert(self.selfBuffs, common.getItem('Xxeric\'s Matted-Fur Mask', {CheckFor='Reyfin\'s Racing Thoughts'}))
     local pantherTablet = mq.TLO.FindItem('Imbued Rune of the Panther')()
@@ -407,7 +407,7 @@ function Shaman:initBuffs()
     table.insert(self.singleBuffs, self.spells.slowproc)
     table.insert(self.singleBuffs, self.spells.proc)
     table.insert(self.selfBuffs, common.getAA('Pact of the Wolf', {RemoveBuff='Pact of the Wolf Effect'}))
-    table.insert(self.selfBuffs, self.spells.champion)
+    --table.insert(self.selfBuffs, self.spells.champion)
     table.insert(self.selfBuffs, common.getAA('Languid Bite'))
     table.insert(self.singleBuffs, self.spells.groupunity)
     table.insert(self.singleBuffs, common.getAA('Group Pact of the Wolf', {classes={SHD=true,WAR=true}}))
