@@ -1,3 +1,6 @@
+# 2024/01/29
+- Questionable updates around precast/postcast to work with the not synchronous pattern of the script
+
 # 2024/01/28
 - More 86-100 spells for ber bst clr enc pal
 
